--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #f0f0f0;
+    background-color: #638590;
   }
   
   .logo img {
@@ -13,6 +13,7 @@
   
   .title h1 {
     margin: 0;
+    margin-left: 200px;
   }
   
   nav ul {
@@ -20,6 +21,7 @@
     display: flex;
     gap: 20px;
     margin: 0;
+    color: #000000;
   }
   
   nav a {
