--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -7,10 +7,6 @@
     background-color: #638590;
   }
   
-  .logo img {
-    width: 50px; /* Adjust the width as needed */
-  }
-  
   .title h1 {
     margin: 0;
     margin-left: 200px;
@@ -40,3 +36,35 @@ nav a {
     color: red; /* Change the color to red on hover */
   }
   
+  /* Header.css */
+/* ... Your existing styles */
+
+.hamburger-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 100%;
+  cursor: pointer;
+}
+
+.bar {
+  width: 30px;
+  height: 3px;
+  background-color: #000;
+  margin: 4px 0;
+  transition: 0.4s;
+}
+
+/* Add animation for the bars on toggle */
+.hamburger-icon.open .bar:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.hamburger-icon.open .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.open .bar:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
