--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -3,7 +3,8 @@
     background-color: #f0f0f0;
     text-align: center;
     padding: 10px;
-     /* Position the footer absolutely */
+    position: relative;
+    margin-top: 100px;
     width: 100%; /* Make the footer span the entire width */
     bottom: 0; /* Position the footer at the bottom of the page */
   }
