--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,43 +1,56 @@
 /* src/components/Header.css */
 .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #638590;
-  }
-  
-  .title h1 {
-    margin: 0;
-    margin-left: 200px;
-  }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
-    color: #000000;
-  }
-  
-  nav a {
-    text-decoration: none;
-    color: #333;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #638590;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  /* Add transitions for smooth effects */
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  /* Make sure the header is on top of other content */
+  box-shadow: 2px 5px 15px rgba(50, 0, 50, 0.5); /* Add a shadow */
+  /* Add a subtle box shadow */
+}
+
+.title h1 {
+  margin: 0;
+  margin-left: 240px;
+}
+
+.scrolled {
+  background-color: #638590;
+  /* Change the background color when scrolled */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* Increase box shadow when scrolled */
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  color: #000000;
+  margin-right: 40px;
+}
+
+
 
 nav a {
-    text-decoration: none;
-    color: #333;
-    transition: color 0.3s; /* Add a transition for smooth color change */
-  }
-  
-  nav a:hover {
-    color: red; /* Change the color to red on hover */
-  }
-  
-  /* Header.css */
-/* ... Your existing styles */
+  text-decoration: none;
+  color: #333;
+  transition: color 0.3s;
+  /* Add a transition for smooth color change */
+}
+
+nav a:hover {
+  color: red;
+  /* Change the color to red on hover */
+}
+
 
 .hamburger-icon {
   display: flex;
