--- a/frontend/src/components/SignUp.css
+++ b/frontend/src/components/SignUp.css
@@ -1,14 +1,14 @@
 /* src/components/SignUp.css */
-/* src/components/SignUp.css */
 .signup-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-    margin-top: 150px; 
-    margin-bottom: 250px;/* Add margin to separate from the header */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center; 
+  margin: 0 auto;
+  margin-top: 200px;
+  margin-bottom: 250px;
   }
   
   
@@ -24,28 +24,30 @@
     margin-bottom: 20px;
     text-align: left;
     width: 300px; /* Adjust width as needed */
-  }
-  
-  .label {
-    font-size: 16px; /* Increase label font size */
-    margin-bottom: 5px;
-  }
-  
-  .input-field {
-    padding: 8px;
-    font-size: 16px; /* Reduce input font size */
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 100%; /* Make input field width 100% */
-  }
-  
-  button {
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
+}
+
+.label {
+  font-size: 16px;
+  /* Increase label font size */
+  margin-bottom: 5px;
+}
+
+.input-field {
+  padding: 8px;
+  font-size: 16px;
+  /* Reduce input font size */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  /* Make input field width 100% */
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+}
