--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -3,6 +3,7 @@
     position: relative;
     background-color: #f0f0f0;
     text-align: center;
+    font-style: italic;
     padding: 10px;
   }
   
