--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -1,40 +1,75 @@
-/* src/components/Login.css */
 .login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-  }
-  
-  .input-container {
-    margin-bottom: 20px;
-    font-size: 18px;
-    text-align: left;
-  }
-  
-  input {
-    padding: 10px;
-    font-size: 18px;
-    width: 100%;
-  }
-  
-  button {
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: #ccc; /* Initially grey */
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
-  
-  button:disabled {
-    background-color: #ccc; /* Grey when disabled */
-    cursor: not-allowed;
-  }
-  
-  button.enabled {
-    background-color: #007bff; /* Blue when enabled */
-  }
-  
+  font-family: Arial, sans-serif;
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 180px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+/* Style the error message */
+.error-message {
+  color: #ff0000;
+  margin-bottom: 10px;
+}
+
+/* Style the input container */
+.input-container1 {
+  margin: 10px 0;
+  text-align: left;
+  padding-right: 20px;
+}
+
+/* Style the label for inputs */
+.input-container1 label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+/* Style the input fields */
+.login-input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+/* Style the login button */
+.enabled {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 18px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Style the disabled button */
+.disabled {
+  background-color: #ccc;
+  color: #999;
+  padding: 10px 20px;
+  font-size: 18px;
+  border: none;
+  border-radius: 4px;
+  cursor: not-allowed;
+}
+
+/* Style the link for signup */
+.login-container a {
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+}
+
+/* Style the link on hover */
+.login-container a:hover {
+  text-decoration: underline;
+}
