--- a/frontend/src/components/Sidebar.css
+++ b/frontend/src/components/Sidebar.css
@@ -8,6 +8,7 @@
     background-color: #fff;
     transition: left 0.3s ease;
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.2);
+    z-index: 2;
   }
   
   .sidebar.open {
@@ -30,7 +31,8 @@
   }
   
   .close-button {
-    position: absolute;
+    position: relative;
+    margin-top: 40px;
     bottom: 20px;
     left: 20px;
     padding: 10px 20px;
