--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -7,10 +7,15 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     max-width: 600px;
     margin: 0 auto;
-    margin-top: 85px;
-    margin-bottom: 85px;
+    margin-top: 70px;
+    margin-bottom: 75px;
 }
 
-.aboutus-title {
+.aboutus-title { 
     text-align : center;
+}
+
+.aboutus-container p{
+    text-align: left;
+    color: black;
 }
