--- a/frontend/src/components/Findspouse.css
+++ b/frontend/src/components/Findspouse.css
@@ -1,26 +1,35 @@
 /* src/components/Findspouse.css */
+
 .findspouse-container {
-    max-width: 800px;
-    margin: 0 auto;
-    margin-top: 100px;
-    padding: 20px;
-    text-align: center;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  .findspouse-container h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: #333;
-  }
-  
-  .findspouse-container p {
-    font-size: 18px;
-    color: #555;
-  }
-  
-  /* You can customize these styles further based on your design preferences */
-  
+  text-align: center;
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Adjust the minmax value as needed */
+  grid-gap: 20px; /* Adjust the gap between buttons */
+}
+
+.match-button {
+  background-color: beige;
+  height: 300px; /* Adjust the fixed height for each button */
+  color: #0d0d0d;
+  border: none;
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 16px;
+}
+
+.match-button img {
+  width: 250px; /* Adjust the image size as needed */
+  margin-bottom: 10px; /* Adds spacing between the image and text */
+}
+
+.match-button:hover {
+  background-color: blueviolet;
+}
