--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,9 +1,12 @@
 /* src/components/Footer.css */
 .footer-container {
     position: relative;
-    background-color: #f0f0f0;
+    background-color: #c36af7;
     text-align: center;
     font-style: italic;
     padding: 10px;
   }
   
+  .footer-container p{
+    color: blue;
+  }
