--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,67 +1,51 @@
 /* src/components/Header.css */
+
 .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #f0f0f0;
-  }
-  
-  .logo img {
-    width: 50px; /* Adjust the width as needed */
-  }
-  
-  .title h1 {
-    margin: 0;
-  }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
-  }
-  
-  nav a {
-    text-decoration: none;
-    color: #333;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #b2187e; /* Header background color */
+  padding: 10px 20px;
+  color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.8); /* Text color */
+}
+
+.title a{
+  text-decoration: none;
+  color: #ebdbdb; /* Title text color */
+  font-size: 24px; /* Title font size */
+}
+
+.title h1{
+  color: beige;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav li {
+  margin-right: 20px;
+}
 
 nav a {
-    text-decoration: none;
-    color: #333;
-    transition: color 0.3s; /* Add a transition for smooth color change */
-  }
-  
-  nav a:hover {
-    color: red; /* Change the color to red on hover */
-  }
-  
+  text-decoration: none;
+  color: #fff; /* Nav links color */
+  font-size: 16px; /* Nav links font size */
+}
 
-  /* Header.css */
-/* ... Your existing styles */
-
+/* Hamburger menu icon */
 .hamburger-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50px;
-  height: 100%;
+  display: none;
+  flex-direction: column;
   cursor: pointer;
 }
 
-.bar {
-  width: 30px;
-  height: 3px;
-  background-color: #000;
-  margin: 4px 0;
-  transition: 0.4s;
-}
-
-/* Add animation for the bars on toggle */
 .hamburger-icon.open .bar:nth-child(1) {
-  transform: rotate(-45deg) translate(-5px, 6px);
+  transform: translateY(5px) rotate(-45deg);
 }
 
 .hamburger-icon.open .bar:nth-child(2) {
@@ -69,5 +53,40 @@ nav a {
 }
 
 .hamburger-icon.open .bar:nth-child(3) {
-  transform: rotate(45deg) translate(-5px, -6px);
+  transform: translateY(-5px) rotate(45deg);
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  margin: 4px 0;
+  transition: 0.4s;
+}
+.hamburger-icon {
+  display: flex;
+}
+
+
+/* Media query for mobile responsiveness */
+@media (max-width: 600px) {
+
+  nav ul {
+    display: none;
+    flex-direction: column;
+    background-color: #333;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    left: 0;
+  }
+
+  nav ul.active {
+    display: flex;
+  }
+
+  nav li {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
 }
