--- a/frontend/src/components/SignUp.css
+++ b/frontend/src/components/SignUp.css
@@ -1,49 +1,76 @@
 /* src/components/SignUp.css */
-/* src/components/SignUp.css */
+
+/* Container styles */
 .signup-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-bottom: 50px;
-  }
-  
-  
-  
-  .error-message {
-    color: red;
-    margin-bottom: 10px;
-  }
-  
-  .input-container {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    text-align: left;
-    width: 300px; /* Adjust width as needed */
-  }
-  
-  .label {
-    font-size: 16px; /* Increase label font size */
-    margin-bottom: 5px;
-  }
-  
-  .input-field {
-    padding: 8px;
-    font-size: 16px; /* Reduce input font size */
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 100%; /* Make input field width 100% */
-  }
-  
-  button {
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Header styles */
+.signup-container h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* Label styles */
+.label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+/* Input field styles */
+.input-field {
+  width: 95%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+.select-field {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+/* Select styles */
+.input-field.select {
+  height: 36px; /* Adjust the height to match input fields */
+}
+
+/* Error message styles */
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
+/* Button styles */
+.signup-button {
+  width: 100%;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.signup-button:hover {
+  background-color: #0056b3;
+}
