--- a/frontend/src/components/Spouse.css
+++ b/frontend/src/components/Spouse.css
@@ -28,6 +28,8 @@
     font-size: 18px;
     color: #555;
   }
-  
-  /* Add more styles as needed */
+
+  .spouse-container button:disabled {
+    color : black;
+  }
   
