--- a/frontend/src/components/Updatepreference.css
+++ b/frontend/src/components/Updatepreference.css
@@ -12,6 +12,10 @@
     border-radius: 5px;
     background-color: #f8f8f8;
   }
+
+  .updatepreference-container button {
+    background-color: rgb(212, 23, 200);
+  }
   
   .updatepreference-container h3 {
     text-align: center;
@@ -27,6 +31,11 @@
   /* Style the input container */
   .input-container {
     margin-bottom: 20px;
+  }
+
+  .input-container button {
+    text-align: left;
+    background-color: rgb(13, 69, 212);
   }
   
   /* Style the label */
